--- a/config.yml
+++ b/config.yml
@@ -16,7 +16,7 @@ Github: https://github.com/sonujana26/Discord-AI-Chatbot
 TRIGGER:
   - chatbot
   - olympus
-  - $
+  - &
   - olympus-ai
   - soniye 
 
@@ -26,7 +26,7 @@ DISABLE_PRESENCE: false
 PRESENCES:
   - How can I assist you?
   - Currently in {guild_count} guilds
-  - Support at https://discord.gg/olympusop
+  - Support at 
 
 
 BLACKLIST_WORDS: #changed to cogs/imagine.py
